Fixing spacing issues

--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ header {
 
 nav {
     text-align: center;
+    margin-top: -20px;
 }
 
 #title1 {
@@ -42,6 +43,7 @@ img {
     height: 100px;
     padding-top: -40px;
     padding-left: 43%;
+    padding-bottom: 20px;
 
 table {
     border: 4px solid gray;
